Set height & margin to prevent metabox from jumping when checking all-day.

--- a/assets/css/calendar.css
+++ b/assets/css/calendar.css
@@ -13,6 +13,8 @@
 }
 .wp_event_calendar_datepicker {
 	max-width: 125px;
+	height: 28px;
+	margin: 2px 0 3px;
 }
 .event-time input {
 	max-width: 50px;
